--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,10 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "clsx": "^1.1.1",
+    "namor": "^2.0.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-table": "^7.5.1",
     "reactstrap": "^8.6.0",
@@ -43,8 +43,5 @@
       "last 1 safari version",
       "IE 11"
     ]
-  },
-  "devDependencies": {
-    "namor": "^2.0.2"
   }
 }
