--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,18 +3,26 @@
 spring.jpa.hibernate.ddl-auto=update
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/react-db
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.url = jdbc:mysql://localhost:3306/react-db?\
+#  allowPublicKeyRetrieval=true&\
+#  verifyServerCertificate=false&\
+#  useSSL=false&\
+#  requireSSL=false&\
+#  useUnicode=true&useJDBCCompliantTimezoneShift=false&useLegacyDatetimeCode=false&serverTimezone=Europe/Athens
+#spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+
+spring.datasource.url=jdbc:mariadb://localhost:3307/react-db
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.url = jdbc:mysql://localhost:3307/react-db?\
-  allowPublicKeyRetrieval=true&\
-  verifyServerCertificate=false&\
-  useSSL=false&\
-  requireSSL=false&\
-  useUnicode=true&useJDBCCompliantTimezoneShift=false&useLegacyDatetimeCode=false&serverTimezone=Europe/Athens
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 
 spring.jpa.show-sql=true
 logging.level.org.hibernate.type=trace
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 server.port=8081
