--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,25 +1,18 @@
 {
-  "name": "spring-react-app",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://localhost:8081",
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
+    "@material-ui/core": "^4.9.0",
+    "@material-ui/icons": "^4.5.1",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.20.0",
-    "bootstrap": "^4.5.2",
-    "clsx": "^1.1.1",
-    "lodash": "^4.17.20",
-    "namor": "^2.0.2",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
-    "react-table": "^7.5.1",
-    "reactstrap": "^8.6.0",
-    "validator": "^13.1.17"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,14 +27,12 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all",
-      "IE 11"
+      "not op_mini all"
     ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version",
-      "IE 11"
+      "last 1 safari version"
     ]
   }
 }
