--- a/pom.xml
+++ b/pom.xml
@@ -71,11 +71,11 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
-<!--		<dependency>-->
-<!--			<groupId>org.mariadb.jdbc</groupId>-->
-<!--			<artifactId>mariadb-java-client</artifactId>-->
-<!--			<version>2.7.0</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<version>2.7.0</version>
+		</dependency>
 
 
 		<!--		<dependency>-->
@@ -151,6 +151,7 @@
 						<configuration>
 							<target>
 								<copy todir="${project.build.directory}/classes/public">
+							<!--	<copy todir="${project.build.outputDirectory}/classes/public"> -->
 									<fileset dir="${project.basedir}/frontend/build"/>
 								</copy>
 							</target>
