--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,30 @@
+#spring.mvc.view.prefix=/WEB-INF/classes/public/
+#spring.mvc.view.suffix=.html
 
-
+spring.data.rest.base-path=/api
 spring.jpa.hibernate.ddl-auto=update
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/react-db
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.url = jdbc:mysql://localhost:3306/react-db?\
-  allowPublicKeyRetrieval=true&\
-  verifyServerCertificate=false&\
-  useSSL=false&\
-  requireSSL=false&\
-  useUnicode=true&useJDBCCompliantTimezoneShift=false&useLegacyDatetimeCode=false&serverTimezone=Europe/Athens
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-
-#spring.datasource.url=jdbc:mariadb://localhost:3307/react-db
 #spring.datasource.username=root
 #spring.datasource.password=root
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.url = jdbc:mysql://localhost:3306/react-db?\
+#  allowPublicKeyRetrieval=true&\
+#  verifyServerCertificate=false&\
+#  useSSL=false&\
+#  requireSSL=false&\
+#  useUnicode=true&useJDBCCompliantTimezoneShift=false&useLegacyDatetimeCode=false&serverTimezone=Europe/Athens
+#spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+spring.datasource.url=jdbc:mariadb://localhost:3307/react-db
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 
 
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
