--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
 	<description>Demo project for React Spring Full Stack App</description>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 	</properties>
 
@@ -106,7 +108,7 @@
 				<artifactId>frontend-maven-plugin</artifactId>
 				<version>1.10.3</version>
 				<configuration>
-					<workingDirectory>frontend</workingDirectory>
+					<workingDirectory>frontend/</workingDirectory>
 					<installDirectory>target</installDirectory>
 				</configuration>
 				<executions>
@@ -116,7 +118,7 @@
 							<goal>install-node-and-npm</goal>
 						</goals>
 						<configuration>
-							<nodeVersion>v8.9.4</nodeVersion>
+                            <nodeVersion>v8.11.3</nodeVersion>
 							<npmVersion>5.6.0</npmVersion>
 						</configuration>
 					</execution>
@@ -150,7 +152,7 @@
 						<phase>generate-resources</phase>
 						<configuration>
 							<target>
-								<copy todir="${project.build.directory}/classes/public">
+								<copy todir="${project.build.directory}/classes/static">
 									<fileset dir="${project.basedir}/frontend/build"/>
 								</copy>
 							</target>
