--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,21 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
+    "dotenv-expand": "^5.1.0",
+    "env-cmd": "^10.1.0",
     "history": "^5.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start-front": "env-cmd -f .env.frontend react-scripts start",
+    "build-front": "env-cmd -f .env.frontend react-scripts build",
+    "start-dev": "env-cmd -f .env.development react-scripts start",
+    "build-dev": "env-cmd -f .env.development react-scripts build",
+    "start-prod": "env-cmd -f .env.production react-scripts start",
+    "build-prod": "env-cmd -f .env.production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
