Completely outsourcing environmental calls to RESTful API either it's to mock JSON server OR to regular server by configuring the environments properly for rapid frontend development.

--- a/frontend/.env.frontend
+++ b/frontend/.env.frontend
@@ -1,4 +1,6 @@
 
 REACT_APP_ENVIRONMENT=frontend
 REACT_APP_ROOT_BASE_URL=http://localhost:3000/saadekef
-REACT_APP_API_BASE_URL=$REACT_APP_ROOT_BASE_URL/api
+
+#WHY NO PREPEND WITH /api? JSON SERVER THAT'S WHY!
+REACT_APP_API_BASE_URL=http://localhost:8081
