--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
     "dotenv-expand": "^5.1.0",
     "env-cmd": "^10.1.0",
     "history": "^5.0.0",
+    "json-server": "^0.16.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "json-server": "json-server --watch mock-db.json",
     "start-front": "env-cmd -f .env.frontend react-scripts start",
     "build-front": "env-cmd -f .env.frontend react-scripts build",
     "start-dev": "env-cmd -f .env.development react-scripts start",
