--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "env-cmd": "^10.1.0",
     "history": "^5.0.0",
     "json-server": "^0.16.2",
+    "lodash": "^4.17.20",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
