--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-#spring.mvc.view.prefix=/WEB-INF/classes/public/
+#spring.mvc.view.prefix=/WEB-INF/classes/static/
 #spring.mvc.view.suffix=.html
 
-spring.data.rest.base-path=/api
+#spring.data.rest.base-path=/api
 spring.jpa.hibernate.ddl-auto=update
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/react-db
@@ -19,12 +19,19 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
-spring.datasource.url=jdbc:mariadb://localhost:3307/react-db
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mariadb://localhost:3307/react-db
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
+# oracle database configuration
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+spring.datasource.url=jdbc:oracle:thin:@192.168.1.163:1521/ORA11G
+spring.datasource.username=AMSUSER
+spring.datasource.password=Sb83sb83!
+
 
 
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
