Adding JWTUtil logic to api for testing

--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,15 @@
 			<version>2.11.3</version>
 		</dependency>
 
-<!--		&lt;!&ndash; https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client &ndash;&gt;-->
+		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+
+
+		<!--		&lt;!&ndash; https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client &ndash;&gt;-->
 <!--		<dependency>-->
 <!--			<groupId>org.mariadb.jdbc</groupId>-->
 <!--			<artifactId>mariadb-java-client</artifactId>-->
