--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
 REACT_APP_ENVIRONMENT=production
-REACT_APP_ROOT_BASE_URL=https://aade-web.dataverse.gr/saadekef/eticket
+REACT_APP_ROOT_BASE_URL=http://localhost:8081/saadekef/eticket
 REACT_APP_API_BASE_URL=$REACT_APP_ROOT_BASE_URL/api
