--- a/pom.xml
+++ b/pom.xml
@@ -44,12 +44,18 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.oracle.jdbc</groupId>
-			<artifactId>ojdbc6</artifactId>
-			<version>6</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/lib/ojdbc6.jar</systemPath>
+			<groupId>com.kastkode</groupId>
+			<artifactId>springsandwich</artifactId>
+			<version>[1.0.2,)</version>
 		</dependency>
+
+<!--		<dependency>-->
+<!--			<groupId>com.oracle.jdbc</groupId>-->
+<!--			<artifactId>ojdbc6</artifactId>-->
+<!--			<version>6</version>-->
+<!--			<scope>system</scope>-->
+<!--			<systemPath>${basedir}/lib/ojdbc6.jar</systemPath>-->
+<!--		</dependency>-->
 
 <!--		<dependency>-->
 <!--			<groupId>org.springframework.boot</groupId>-->
@@ -93,13 +99,19 @@
 			<version>0.9.1</version>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>com.google.code.gson</groupId>-->
+<!--			<artifactId>gson</artifactId>-->
+<!--			<version>2.8.6</version>-->
+<!--		</dependency>-->
+
 
 		<!--		&lt;!&ndash; https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client &ndash;&gt;-->
-<!--		<dependency>-->
-<!--			<groupId>org.mariadb.jdbc</groupId>-->
-<!--			<artifactId>mariadb-java-client</artifactId>-->
-<!--			<version>2.7.0</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<version>2.7.0</version>
+		</dependency>
 
 
 		<!--		<dependency>-->
@@ -225,13 +237,13 @@
 								<include>**/*.pdf</include>
 							</includes>
 						</resource>
-						<resource>
-							<directory>${basedir}/lib</directory>
-							<targetPath>WEB-INF/lib</targetPath>
-							<includes>
-								<include>**/*.jar</include>
-							</includes>
-						</resource>
+<!--						<resource>-->
+<!--							<directory>${basedir}/lib</directory>-->
+<!--							<targetPath>WEB-INF/lib</targetPath>-->
+<!--							<includes>-->
+<!--								<include>**/*.jar</include>-->
+<!--							</includes>-->
+<!--						</resource>-->
 					</webResources>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 					<archive>
