--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 #spring.mvc.view.prefix=/WEB-INF/classes/static/
 #spring.mvc.view.suffix=.html
 
+aade.app.jwtSecret = oeRaYY7Wo24sDqKSX3IM9ASGmdGPmkTd9jo1QTy4b7P9Ze5_9hKol
+aade.app.jwtExpirationMs = 60000
+
 #spring.data.rest.base-path=/api
 spring.jpa.hibernate.ddl-auto=update
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/react-db
 #spring.datasource.username=root
 #spring.datasource.password=root
 #spring.datasource.url = jdbc:mysql://localhost:3306/react-db?\
@@ -14,23 +16,22 @@ spring.jpa.hibernate.ddl-auto=update
 #  requireSSL=false&\
 #  useUnicode=true&useJDBCCompliantTimezoneShift=false&useLegacyDatetimeCode=false&serverTimezone=Europe/Athens
 #spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-
+#
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
-#spring.datasource.url=jdbc:mariadb://localhost:3307/react-db
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/react-db
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 
 # oracle database configuration
-spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
-spring.datasource.url=jdbc:oracle:thin:@192.168.1.163:1521/ORA11G
-spring.datasource.username=AMSUSER
-spring.datasource.password=Sb83sb83!
+#spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+#spring.datasource.url=jdbc:oracle:thin:@192.168.1.163:1521/ORA11G
+#spring.datasource.username=AMSUSER
+#spring.datasource.password=Sb83sb83!
 
 
 
@@ -38,6 +39,10 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 spring.jpa.show-sql=true
 logging.level.org.hibernate.type=trace
+
+
+logging.level.org.springframework=DEBUG
+logging.level.gr.dataverse=DEBUG
 
 
 server.port=8081
