--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,15 @@
 			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
 
-<!--		<dependency>-->
+<!--		used for filtering particular requests..-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+			<version>2.3.5.RELEASE</version>
+		</dependency>
+
+
+		<!--		<dependency>-->
 <!--			<groupId>com.kastkode</groupId>-->
 <!--			<artifactId>springsandwich</artifactId>-->
 <!--			<version>[1.0.2,)</version>-->
